Added YouTube Support and improved documentation

--- a/nginx.conf
+++ b/nginx.conf
@@ -11,15 +11,10 @@ rtmp {
         listen ${RTMP_PORT};
         chunk_size 4096;
 
-        application stream {
+        application mystream {
             live on;
             record off;
             push rtmp://live.twitch.tv/app/${STREAM_KEY_TWITCH};
+            push rtmp://a.rtmp.youtube.com/live2/${STREAM_KEY_YOUTUBE};
         }
-        application app {
-            live on;
-            record off;
-            push rtmp://live.twitch.tv/app/${STREAM_KEY_TWITCH};
-        }
-    }
 }
