--- a/restream-app.yml
+++ b/restream-app.yml
@@ -1,11 +1,13 @@
 version: "3.9"
 services:
   web:
+    name: self-hosted-restream
     image: alfg/nginx-rtmp:latest
     ports:
       - "1935:1935"
       - "8080:80"
     environment: 
       - STREAM_KEY_TWITCH
+      - STREAM_KEY_YOUTUBE
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf.template
